调整INT配置文件

--- a/job/src/main/resources/application-int.yml
+++ b/job/src/main/resources/application-int.yml
@@ -45,9 +45,9 @@ spring:
       strict: false #严格匹配数据源,默认false. true未匹配到指定数据源时抛异常,false使用默认数据源
       datasource:
         mysql:
-          url: jdbc:mysql://localhost:3306/alm?keepAlive=true&autoReconnect=true&autoReconnectForPools=true&serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&useSSL=false
-          username: alm
-          password: 123456
+          url: jdbc:mysql://mysql-sdf6md.rds.jdcloud.com:3306/alm?keepAlive=true&autoReconnect=true&autoReconnectForPools=true&serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&useSSL=false
+          username: alm_test
+          password: "*uZ8^ghI"
           driver-class-name: com.mysql.cj.jdbc.Driver
     starrocks:
       streamload:
@@ -59,27 +59,17 @@ spring:
 
   #配置redis数据库连接
   redis:
-    host: 127.0.0.1
+    host: 10.2.13.149
     port: 6379
-    password: 123456
+    password: User123$
     timeout: 5000
-    database: 0
+    database: 3
     jedis:
       pool:
         max-active: 8 #最大连接数
         max-idle: 4
         min-idle: 4
         max-wait: 10000
-
-oss:
-  endpoint: oss-cn-beijing.aliyuncs.com
-  bucketName:
-    public:  int-pub
-    private: int-pri
-  accessKeyId: ENC(0Nf3rZFCxzDb6S6t60v1hVXfpJf+hUhTwsYlUx5AfcbMYumqIUAG3g==)
-  accessKeySecret: ENC(U7Kj06nXAP+ef1fF5Pm1JD5Hc3KjcwiF8QFwjCjR/Uyh+Kql2S9pAw==)
-  prefix: itmanager
-  ishttps: N
 
 # 日志配置
 logging:
@@ -114,11 +104,11 @@ financeId:
     num: 10001
   #数据库配置
   datasource:
-    url: jdbc:mysql://localhost:3306/alm?keepAlive=true&autoReconnect=true&autoReconnectForPools=true&serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&useSSL=false
+    url: jdbc:mysql://mysql-sdf6md.rds.jdcloud.com:3306/alm?keepAlive=true&autoReconnect=true&autoReconnectForPools=true&serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&useSSL=false
+    username: alm_test
+    password: "*uZ8^ghI"
     type: mysql
     driver: com.mysql.cj.jdbc.Driver
-    user: alm
-    password: 123456
   
   
 job-scheduling:
