--- a/web/.env.int
+++ b/web/.env.int
@@ -8,4 +8,4 @@ VUE_APP_ENV = int
 NODE_ENV = production
 
 # 公共请求地址
-VUE_APP_BASE_API = https://vue.ruoyi.vip/prod-api
+VUE_APP_BASE_API = https://alm-int.hongkang-life.com/api
