--- a/web/package.json
+++ b/web/package.json
@@ -8,11 +8,11 @@
     "dev": "vue-cli-service serve",
     "pro": "vue-cli-service build",
     "build:uat": "vue-cli-service build --mode uat",
-    "uat": "npm run build:uat",
+    "uat": "vue-cli-service serve --mode uat",
     "build:int": "vue-cli-service build --mode int",
-    "int": "npm run build:int",
+    "int": "vue-cli-service serve --mode int",
     "build:test": "vue-cli-service build --mode test",
-    "test": "npm run build:test",
+    "test": "vue-cli-service serve --mode test",
     "preview": "node build/index.js --preview",
     "lint": "eslint --ext .js,.vue src"
   },
