--- a/app/src/main/resources/application-int.yml
+++ b/app/src/main/resources/application-int.yml
@@ -6,9 +6,9 @@ spring:
       # 主库数据源
       master:
         driverClassName: com.mysql.cj.jdbc.Driver
-        url: jdbc:mysql://localhost:3306/alm?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&useSSL=false
-        username: alm
-        password: 123456
+        url: jdbc:mysql://mysql-sdf6md.rds.jdcloud.com:3306/alm?keepAlive=true&autoReconnect=true&autoReconnectForPools=true&serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&useSSL=false
+        username: alm_test
+        password: "*uZ8^ghI"
       # 初始连接数
       initialSize: 5
       # 最小连接池数量
@@ -52,9 +52,9 @@ spring:
     open-in-view: false
   #配置redis数据库连接
   redis:
-    host: localhost
+    host: 10.2.13.149
     port: 6379
-    password: 123456
+    password: User123$
     timeout: 5000
     database: 2
 
@@ -69,9 +69,9 @@ logging:
 financeId:
   #数据库配置
   datasource:
-    url: jdbc:mysql://localhost:3306/alm?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&useSSL=false
+    url: jdbc:mysql://mysql-sdf6md.rds.jdcloud.com:3306/alm?keepAlive=true&autoReconnect=true&autoReconnectForPools=true&serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&useSSL=false
+    username: alm_test
+    password: "*uZ8^ghI"
     type: mysql
     driver: com.mysql.cj.jdbc.Driver
-    user: alm
-    password: 123456
 
