--- a/web/.env.production
+++ b/web/.env.production
@@ -1,5 +1,5 @@
 # 页面标题
-VUE_APP_TITLE = 
+VUE_APP_TITLE =
 
 # 运行环境
 VUE_APP_ENV = pro
@@ -8,4 +8,4 @@ VUE_APP_ENV = pro
 NODE_ENV = production
 
 # 公共请求地址
-VUE_APP_BASE_API = 
+VUE_APP_BASE_API = https://alm.hongkang-life.com/api
