关键久期需求批处理

--- a/job/src/main/resources/application.yml
+++ b/job/src/main/resources/application.yml
@@ -31,6 +31,8 @@ mybatis-plus:
     local-cache-scope: STATEMENT
 
 spring:
+  profiles:
+    active: int
   lifecycle:
     timeout-per-shutdown-phase: 40s
   #  mvc 路径解析配置
