调整VUE_APP_BASE_API为本地地址

--- a/web/.env.development
+++ b/web/.env.development
@@ -8,4 +8,4 @@ VUE_APP_ENV = local
 NODE_ENV = development
 
 # 公共请求地址
-VUE_APP_BASE_API = http://10.11.136.45:8095
+VUE_APP_BASE_API = http://localhost:8095
