--- a/job/src/main/resources/application.yml
+++ b/job/src/main/resources/application.yml
@@ -29,8 +29,14 @@ mybatis-plus:
     cache-enabled: false
     call-setters-on-nulls: true
     local-cache-scope: STATEMENT
-
+# Spring配置
 spring:
+  # 资源信息
+  messages:
+    # 国际化资源文件路径
+    basename: i18n/messages
+  profiles:
+    active: int
   lifecycle:
     timeout-per-shutdown-phase: 40s
   #  mvc 路径解析配置
