job分产品和分账户

--- a/job/src/main/resources/application-int.yml
+++ b/job/src/main/resources/application-int.yml
@@ -92,7 +92,7 @@ powerjob:
   worker:
     app-name: admin_data
     app-password: ENC(r+ziP5+N8CJr5g5bJXx0ww==)
-    enabled: true
+    enabled: false
     max-appended-wf-context-length: 4096
     max-result-length: 4096
     port: 27777
